0.40008 Fri May 11, 2012
    Add 'missing' method to Field
    Use result in Bootstrap render_form_messages
    Fix Render::Table
    Propagate errors when they're added, so $form->has_errors
        works in sub validate
    Use do_render_label in Bootstrap wrapper to allow setting
        label class/attributes
    Add subfield convenience method.
    Remove 'reload_after_update'. Didn't work anyway. Bug: duplicate
        results with repeatables. (avoid with reload_after_update => 0)
    Re-factor RadioGroup widget to allow individually rendered options
    Support option groups in 'Select', 'RadioGroup' & 'CheckboxGroup' widgets

0.40007 Tues Apr 24, 2012
    Re-factor widget to provide 'render_element' method
    Various doc updates
    Move 'by_flag' processing into '_merge_updates'
    Handle disabled fields better; result_from_fields if no input
    Fix bug: html_attributes callback called with 'input' instead of 'element'

0.40006 Tues Apr 10, 2012
    Render::Table incorrect table start
    Minor doc cleanup
    Add 'build_label_method'
    Re-do merging of widget_tags
    Implement experimental 'include' list for Form/Compound fields
    Refactor merge_updates and update_subfields to handle contains
    Add 'by_type' to update_subfields

0.40005 Mon Mar 26, 2012
    prevent undef from being passed to maketext
    expand use of 'posted' flag to check false values
    add wrap_label method

0.40004 Fri Mar 23, 2012
    Don't put element attributes on select options
    Make render_list lazy
    Better defaults for compound fields
    Provide package name for die when not extending
    Add block_list to provide blocks
    Defaults for repeatable fields

0.40003 Wed Mar 14, 2012
    Move dfv test that fails prereqs

0.40002 Tue Mar 13, 2012
    Put form wrappers that are fieldsets inside form tag; outside not legal HTML
    Doc updates
    Add 'NonEditable' field and 'Span' field widget
    Patch HTMLAttributes (compatibility for older style custom widgets)