@@ -402,6 +402,8 @@ sub _update_or_create {
         $field = $self->new_field_with_traits( $class, $field_attr);
         $parent->add_field($field);
     }
+    $field->form->add_repeatable_field($field)
+        if ( $field->form && $field->has_flag('is_repeatable') );
     return $field;
 }
 
