@@ -57,6 +57,8 @@ has 'is_compound' => ( is => 'ro', isa => 'Bool', default => 1 );
 has 'item' => ( is => 'rw', clearer => 'clear_item' );
 has '+do_wrapper' => ( default => 0 );
 has '+do_label'   => ( default => 0 );
+has 'primary_key' => ( is => 'rw', isa => 'ArrayRef',
+    predicate => 'has_primary_key', );
 
 has '+field_name_space' => (
     default => sub {
